# osu-tournament-editor

./: .editorconfig  .gitignore  AboutQtDialog.ui  CMakeLists.txt  Common.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProjectAboutDialog.cpp  ProjectAboutDialog.h  ProjectAboutDialog.ui  README.md  TranslationGeneratorWindow.cpp  TranslationGeneratorWindow.h  TranslationGeneratorWindow.ui  main.cpp  main.h  mainwindow.ui  osu-tournament-editor_zh_CN.ts
Models/: BeatmapChoice.h  ChoiceType.h  ConditionalTournamentMatch.h  EditorTab.cpp  EditorTab.h  EditorTab.ui  LadderInfo.cpp  LadderInfo.h  Point.h  RoundBeatmap.h  RoundBeatmapModel.cpp  RoundBeatmapModel.h  RulesetInfo.cpp  RulesetInfo.h  Rulesets.cpp  Rulesets.h  SeedingBeatmap.h  SeedingResult.h  Tab.h  TeamColour.h  TournamentBeatmap.h  TournamentMatch.cpp  TournamentMatch.h  TournamentProgression.cpp  TournamentProgression.h  TournamentRound.h  TournamentRoundModel.cpp  TournamentRoundModel.h  TournamentTeam.cpp  TournamentTeam.h  TournamentTeamModel.cpp  TournamentTeamModel.h  TournamentUser.h  TournamentUserModel.cpp  TournamentUserModel.h
Tabs/: BasicInformationTab.cpp  BasicInformationTab.h  BasicInformationTab.ui  RoundEditorTab.cpp  RoundEditorTab.h  RoundEditorTab.ui  TeamEditorTab.cpp  TeamEditorTab.h  TeamEditorTab.ui  WelcomeTab.cpp  WelcomeTab.h  WelcomeTab.ui
libs/: qserializer.h
